--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,14 +1,28 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]='registerForm' (ngSubmit)="register()" autocomplete="off">
   <h2 class="text-center text-primary">Sign up</h2>
   <hr>
   <div class="form-group">
-    <input type="text" class="form-control" name="email" [(ngModel)]="model.email" placeholder="Email">
+    <input [class.is-invalid]="registerForm.get('email').errors 
+        && registerForm.get('email').touched" type="text" class="form-control" formControlName='email'
+      placeholder="Email">
+    <div class="invalid-feedback">Please enter the user email</div>
   </div>
   <div class="form-group">
-    <input type="password" class="form-control" name="password" [(ngModel)]="model.password" placeholder="Password">
+    <input [class.is-invalid]="registerForm.get('password').errors
+        && registerForm.get('password').touched" type="password" class="form-control" formControlName="password"
+      placeholder="Password">
+    <div *ngIf="registerForm.get('password').hasError('required')" class="invalid-feedback">Please enter the user
+      password</div>
+    <div *ngIf="registerForm.get('password').hasError('minlength')" class="invalid-feedback">Password must be at least 8
+      characters
+    </div>
+    <div *ngIf="registerForm.get('password').hasError('isMatching')" class="invalid-feedback">Password should include
+      alphanumeric and special characters</div>
   </div>
   <div class="form-group text-center">
-    <button class="btn btn-success mr-2" type="submit">Register</button>
+    <button [disabled]='!registerForm.valid' class="btn btn-success mr-2" type="submit">Register</button>
     <button class="btn btn-default mr-2" type="button" (click)="cancel()">Cancel</button>
   </div>
 </form>
+<p>Form value: {{registerForm.value | json}}</p>
+<p>Form value: {{registerForm.status | json}}</p>
