--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,5 @@
-<!-- <form #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">
+<form [formGroup]='loginForm' (ngSubmit)="loginForm.valid && login()" autocomplete="off">
   <h2 class="text-center text-primary">Sign in</h2>
-  <hr>
-  <div class="form-group">
-    <input type="text" class="form-control" name="email" [(ngModel)]="model.email" placeholder="Email">
-  </div>
-  <div class="form-group">
-    <input type="password" class="form-control" name="password" [(ngModel)]="model.password" placeholder="Password">
-  </div>
-  <div class="form-group text-center">
-    <button class="btn btn-success mr-2" type="submit">Login</button>
-  </div>
-</form> -->
-<form [formGroup]='loginForm' (ngSubmit)="login()" autocomplete="off">
-  <h2 class="text-center text-primary">Sign up</h2>
   <hr>
   <div class="form-group">
     <input [class.is-invalid]="loginForm.get('email').errors 
