--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -3,3 +3,16 @@
     <app-member-card [member]="member"></app-member-card>
   </div>
 </div>
+<div class="d-flex justify-content-center" *ngIf="pagination">
+  <pagination 
+      [boundaryLinks]="true" 
+      [totalItems]="pagination.total" 
+      [itemsPerPage]="pagination.per_page" 
+      [(ngModel)]="pagination.page"
+      (pageChanged)="pageChanged($event)" 
+      previousText="&lsaquo;" 
+      nextText="&rsaquo;"
+      firstText="&laquo;" 
+      lastText="&raquo;">
+  </pagination>
+</div>
