--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-nav></app-nav>
+<app-nav [userLocation]="userlocation"></app-nav>
 <div class="container" style="margin-top: 100px;">
   <router-outlet></router-outlet>
 </div>
